--- a/src/NUnit.Experimental.SourceGenerator.TestAdapter/NUnit.Experimental.SourceGenerator.TestAdapter.csproj
+++ b/src/NUnit.Experimental.SourceGenerator.TestAdapter/NUnit.Experimental.SourceGenerator.TestAdapter.csproj
@@ -2,14 +2,22 @@
   <PropertyGroup>
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <!--<TargetsForTfmSpecificContentInPackage>$(TargetsForTfmSpecificContentInPackage);_AddGeneratorsToOutput</TargetsForTfmSpecificContentInPackage>-->
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <!--<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" PrivateAssets="all" />-->
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="16.11.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.11.0" />
-    <PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.11.0" PrivateAssets="all" />
+    <!--<PackageReference Include="NUnit" Version="3.13.2" PrivateAssets="all" />-->
   </ItemGroup>
+  <!--<Target Name="_AddGeneratorsToOutput">
+    <ItemGroup>
+      <TfmSpecificPackageFile Include="$(OutputPath)\$(AssemblyName).dll" PackagePath="analyzers/dotnet/cs" />
+      <TfmSpecificPackageFile Include="$(PkgNUnit)\lib\netstandard2.0\*.dll" PackagePath="analyzers/dotnet/cs" />
+      <TfmSpecificPackageFile Include="$(PkgMicrosoft_TestPlatform_ObjectModel)\lib\netstandard2.0\*.dll" PackagePath="analyzers/dotnet/cs" />
+    </ItemGroup>
+  </Target>-->
 </Project>
