--- a/src/NUnit.Experimental.Tests.Reflection/NUnit.Experimental.Tests.Reflection.csproj
+++ b/src/NUnit.Experimental.Tests.Reflection/NUnit.Experimental.Tests.Reflection.csproj
@@ -8,6 +8,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="NUnit.Analyzers" Version="3.2.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NUnit.Experimental.Reflection.TestAdapter\NUnit.Experimental.Reflection.TestAdapter.csproj" />
   </ItemGroup>
   <Import Project="..\NUnit.Experimental.Tests\NUnit.Experimental.Tests.projitems" Label="Shared" />
 </Project>
